# programgarden_hanbit

./: .gitignore  CLAUDE.md  LICENSE  README.md
server/: .env.example  README.md  pyproject.toml
server/app/: __init__.py  config.py  logging_setup.py  main.py
server/app/adapters/: __init__.py  base.py  korea_stock.py  korea_stock_order.py  order_base.py  order_registry.py  overseas_future.py  overseas_future_order.py  overseas_stock.py  overseas_stock_order.py  realtime_future.py
server/app/api/: accounts.py  deps.py  market.py  orders.py  portfolio.py  (+4 more)
server/migrations/: 0001_initial.sql  0002_m2_paper_orders.sql  0003_m3_portfolio_risk.sql
server/scripts/: live_e2e_paper_fut.py  seed_demo.py
server/tests/: _fut_helpers.py  conftest.py  test_concentration.py  test_confirm_token.py  test_daily_loss.py  test_exit_guard.py  test_fx.py  test_fx_cap.py  test_health.py  test_health_allow_live.py  test_killswitch.py  test_killswitch_live.py  test_korea_order.py  test_live_arming.py  test_live_gate.py  test_live_reconcile.py  test_market_adapter.py  test_market_api.py  test_modes.py  test_no_live_facade.py  test_order_adapter_future.py  test_order_service.py  test_order_state_machine.py  test_orders_api.py  test_overseas_order.py  test_per_bucket_engine.py  test_portfolio_aggregator.py  test_portfolio_api.py  test_readonly_invariant.py  test_realized.py  test_realtime_future.py  test_reconcile_boot.py  test_reconcile_future.py  test_risk_gate_paper_fut.py  test_sessions.py  test_strategy_api.py  test_strategy_engine.py  test_tr_queue.py  test_whitelist_o3101.py
(+92 files in other folders)
